src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>X7a_Living_with_whom__c</fullName>
        <inlineHelpText>* Parents/family refers to client’s mother/father, sisters, brothers or extended family: grandparents,uncles, and aunts
* The parents/family code also applies to the client’s adoptive parents or family members.
* Partner refers to spouse or co-habitee</inlineHelpText>
        <label>7a. Living with whom?</label>
        <picklist>
            <picklistValues>
                <fullName>1. Alone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2. Parents/family</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3. Friends</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4. Partner (alone)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5. Partner &amp; Child(ren)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6. Alone with child(ren)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7. Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8. Foster Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9. Not known</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>X7b_Livin_Where__c</fullName>
        <inlineHelpText>* Institution includes prison, residential care or halfway house
* Homeless can include sleeping rough(roofless), living in a guesthouse/hostel/hotel etc
* Other unstable accommodation includes temporary living arrangements</inlineHelpText>
        <label>7b. Living Where?</label>
        <picklist>
            <picklistValues>
                <fullName>1. Stable Accommodation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2. Institution(prison/residential care/halfway house)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3. Homeless</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4. Other unstable accommodation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9. Not Known</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>X8a_Area_of_Residence__c</fullName>
        <formula>Area_of_Residence_and_Reg_Code__r.Area_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>8a. Area of Residence</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X8b_Community_Care_Area__c</fullName>
        <formula>Area_of_Residence_and_Reg_Code__r.CCA__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>8b. Community Care Area</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X9_City_County__c</fullName>
        <formula>Area_of_Residence_and_Reg_Code__r.RegCode__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>9. City/County</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nation__c</fullName>
        <formula>IF( OR( TEXT(X10a_Nationality__c) = &quot;1. Irish&quot; ,

TEXT( X10a_Nationality__c ) = &quot;3. Irish traveller&quot;),

&quot;IRL&quot;,

IF(TEXT( X10a_Nationality__c ) = &quot;9. Not known&quot;, &quot;ZZZ&quot;,


X10a_Nationality_Other__r.NationCode__c))</formula>
        <label>nation</label>
        <type>Text</type>
    </fields>
    <recordTypes>
        <fullName>Client</fullName>
        <active>true</active>
        <description>Clients</description>
        <label>Client</label>
    </recordTypes>
    <validationRules>
        <fullName>Client_Homeless</fullName>
        <active>false</active>
        <errorConditionFormula>AND( OR(TEXT(X7b_Livin_Where__c) = &quot;3. Homeless&quot;,TEXT(X7b_Livin_Where__c) = &quot;2. Institution(prison/residential care/halfway house)&quot;),
TEXT(X7a_Living_with_whom__c) &lt;&gt; &quot;7. Other&quot;)</errorConditionFormula>
        <errorDisplayField>X7a_Living_with_whom__c</errorDisplayField>
        <errorMessage>If the client is homeless or in an institution, please, select Q7a = &quot;7. Other&quot;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Employment_status_other_specified</fullName>
        <active>false</active>
        <errorConditionFormula>AND( TEXT( X11_Employement_Status__c ) = &quot;8. Other (specify)&quot; , ISBLANK( X11_Employement_Status_other__c ))</errorConditionFormula>
        <errorDisplayField>X11_Employement_Status_other__c</errorDisplayField>
        <errorMessage>If Employment status = 8. Other (specify), please complete Q11 Employment Status other</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Nationality_Other_Specified</fullName>
        <active>false</active>
        <errorConditionFormula>AND(TEXT( X10a_Nationality__c ) = &quot;2. Other&quot;,  ISBLANK( X10a_Nationality_Other__c ))</errorConditionFormula>
        <errorDisplayField>X10a_Nationality_Other__c</errorDisplayField>
        <errorMessage>If Q10a = 2, please complete 10a Nationality Other</errorMessage>
    </validationRules>
</CustomObject>